[package]
name = "rs-rget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
colored_json = "3.2.0"
http = "0.2.9"
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }

